--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -19,6 +19,7 @@ FreeRADIUS 3.0.24 Thu 10 Jun 2021 12:00:00 EDT urgency=low
 	  See sites-available/tls, "proxy_protocol" and doc/antora/modules/howto/pages/protocols/proxy/
 	* Generate parse errors in more circumstances when we know that the
 	  configuration is wrong.
+	* Add new %{lasttime:...} allowing calculation of a number of hours/days/weeks/years in the past.
 
 	Bug fixes
 	* Fix crash in trustrouter module (#4115). Patch from Alejandro Perez
