--- a/man/man5/dictionary.5
+++ b/man/man5/dictionary.5
@@ -10,28 +10,28 @@
 .RE
 .sp
 ..
-.TH dictionary 5 "09 Oct 2020"
+.TH dictionary 5 "18 Sep 2021"
 .SH NAME
-dictionary \- RADIUS dictionary file
+dictionary \- FreeRADIUS dictionary file
 .SH DESCRIPTION
-The master RADIUS dictionary file resides in
-\fI/etc/raddb/dictionary\fP.  It references other \fIdictionary\fP
-files located in \fI/usr/local/share/freeradius/\fP.  Each dictionary
-file contains a list of RADIUS attributes and values, which the server
-uses to map between descriptive names and on-the-wire data.  The names
-have no meaning outside of the RADIUS server itself, and are never
-exchanged between server and clients.
+The local dictionary file resides in \fI/etc/raddb/dictionary\fP.  It
+references other \fIdictionary\fP files located in
+\fI/usr/local/share/freeradius/\fP.  Each dictionary file contains a
+list of protocol-specific attributes and values, which the server uses
+to map between descriptive names and on-the-wire data.  The names have
+no meaning outside of the server, and are never sent "on the wire"
+between server and clients.
 .PP
 That is, editing the dictionaries will have NO EFFECT on anything
 other than the server that is reading those files.  Adding new
-attributes to the dictionaries will have NO EFFECT on RADIUS clients,
-and will not make RADIUS clients magically understand those
-attributes.  The dictionaries are solely for local administrator
-convenience, and are specific to each version of FreeRADIUS.
+attributes to the dictionaries will have NO EFFECT on clients, and
+will not make clients magically understand those attributes.  The
+dictionaries are solely for local administrator convenience, and are
+specific to each version of FreeRADIUS.
 .PP
 The dictionaries in \fI/usr/local/share\fP SHOULD NOT be edited unless
 you know exactly what you are doing.  Changing them will most likely
-break your RADIUS deployment.
+break the FreeRADIUS system.
 .PP
 If you need to add new attributes, please edit the
 \fI/etc/raddb/dictionary\fP file.  It's sole purpose is to contain
@@ -127,11 +127,6 @@ definition is, however, accepted:
      long-extended use "long-extended" as a flag instead
      time         use "date" instead
 
-FreeRADIUS will accept a VALUE definition for any "base" data type.
-For example, you can define VALUEs for IP addresses, Ethernet
-addresses, etc.  VALUEs cannot be defined for "structural" data types
-such as struct, tlv, vsa, group, etc.
-
 The "struct" type is a compound type.  An attribute of data type
 "struct" can have multiple sub-attributes defined, just as with TLVs.
 Each sub-attribute has to be numbered sequentially, starting at 1.
@@ -148,8 +143,9 @@ This usage is no longer allowed.
 
 The options are:
 
-     encrypt=...    set encryption type 1, 2, or 3.
+     encrypt=...  set encryption type 1, 2, or 3.
      has_tag      The attribute can have an RFC 2868 style tag
+     clone=...    copy another attribute subtree
 
 The "encrypt" flag marks the attribute as being encrypted with one of
 three possible methods.  "1" means that the attribute is encrypted
@@ -164,12 +160,26 @@ tag, as defined in \fIRFC2868\fP.  The purpose of the tag is to allow
 grouping of attributes for tunneled users.  See \fIRFC2868\fP for
 more details.
 
-When the server receives an encoded attribute in a RADIUS packet, it
-looks up that attribute by number in the dictionary, and uses the
-definition found there for printing diagnostic and log messages.  When
-the server sees an attribute name in a configuration file, it looks up
-that attribute by name in the dictionary, and uses the definition
-found there.
+When the server receives an encoded attribute in a packet, it looks up
+that attribute by number in the dictionary, and uses the definition
+found there for printing diagnostic and log messages.  When the server
+sees an attribute name in a configuration file, it looks up that
+attribute by name in the dictionary, and uses the definition found
+there.
+
+.TP 0.5i
+.B ENUM name  type
+Define an enumerated type, which can contain VALUEs.
+
+The \fIname\fP field has the same definition as for an ATTRIBUTE.
+
+
+The \fItype\fP field has the same definition as for an attribute.
+
+The purpose of ENUM is to define a common set of VALUEs, which can be
+re-used across multiple ATTRIBUTEs.  Each ATTRIBUTE which needs to
+refer to an ENUM should set the "clone" flag, which refers to the ENUM
+name.  For example. "ATTRIBUTE foo 1 uint16 enum=name_of_enum".
 
 .TP 0.5i
 .B MEMBER name  type [flags]
@@ -201,9 +211,15 @@ be any non-space text, but is usually taken from \fIRFC2865\fP, or
 other documents..  The \fInumber\fP field is also taken from the
 relevant documents, for that name.
 
-When the server receives an encoded value in a RADIUS packet, it looks
-up the value of that attribute by number in the dictionary, and uses
-the name found there for printing diagnostic and log messages.
+When the server receives an encoded value in a packet, it looks up the
+value of that attribute by number in the dictionary, and uses the name
+found there for printing diagnostic and log messages.
+
+FreeRADIUS will accept a VALUE definition for any "base" data type.
+For example, you can define VALUEs for IP addresses, Ethernet
+addresses, etc.  VALUEs cannot be defined for "structural" data types
+such as struct, tlv, vsa, group, etc.
+
 .TP 0.5i
 .B VENDOR vendor-name number [format=...]
 Define a Vendor Specific Attribute encapsulation for \fIvendor-name\fP
