--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,4 +1,4 @@
-FreeRADIUS 3.0.24 Thu 10 Jun 2021 12:00:00 EDT urgency=low
+FreeRADIUS 3.0.24 Wed 29 Sep 2021 12:00:00 EDT urgency=medium
 	Feature improvements
 	* Add sanitizer options to configure script.
 	* Log information needed by Wireshark to decode TLS sessions.
@@ -7,7 +7,7 @@ FreeRADIUS 3.0.24 Thu 10 Jun 2021 12:00:00 EDT urgency=low
 	* Add new Acct-Status-Type Subsystem-On and Subsystem-Off.
 	  See dictionary.iana and
 	  https://freeradius.org/rfc/acct_status_type_subsystem.html
-	* add reject_unknown_intermediate_ca.  See mods-available/eap
+	* Add reject_unknown_intermediate_ca.  See mods-available/eap
 	* Add dynamic loading of certificates via TLS-Session-Cert-File.
 	  See raddb/certs/realms/README.md
 	* Add Server Name Indication (SNI) for outbound RadSec connections.
@@ -19,11 +19,12 @@ FreeRADIUS 3.0.24 Thu 10 Jun 2021 12:00:00 EDT urgency=low
 	  See sites-available/tls, "proxy_protocol" and doc/antora/modules/howto/pages/protocols/proxy/
 	* Generate parse errors in more circumstances when we know that the
 	  configuration is wrong.
-	* add "weeklycounter" to sample sqlcounter configuration
-	* add certificate attributes to the request list, even if the certificates
+	* Add "weeklycounter" to sample sqlcounter configuration
+	* Add certificate attributes to the request list, even if the certificates
 	  have expired.
 	* The Simultaneous-Use code is now IPv6 aware, and can deal with
 	  NAS-IPv6-Address.
+	* Add dictionary.cambium
 
 	Bug fixes
 	* Fix crash in trustrouter module (#4115). Patch from Alejandro Perez
@@ -32,7 +33,7 @@ FreeRADIUS 3.0.24 Thu 10 Jun 2021 12:00:00 EDT urgency=low
 	* EAP-FAST will print errors and continue, rather than exiting
 	  when OpenSSL fails various internal sanity checks.
 	* Allow admin to manually change core limits, even when core limits
-	  are disabled.
+	  are disabled. Patch from Antonio Torres.
 	* Fix chunked rlm_rest HTTP body.  Closes #4131.
 	  Patch from Nathan Ward.
 	* Many fixes around the SQL ippool queries.conf and schema.
