--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -37,7 +37,7 @@ FreeRADIUS 3.0.24 Wed 29 Sep 2021 12:00:00 EDT urgency=medium
 	  have expired.
 	* The Simultaneous-Use code is now IPv6 aware, and can deal with
 	  NAS-IPv6-Address.
-	* Add dictionary.cambium
+	* Add dictionary.cambium, dictionary.mellanox
 
 	Bug fixes
 	* Fix crash in trustrouter module (#4115). Patch from Alejandro Perez
