--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,9 +1,12 @@
 FreeRADIUS 3.2.0 Thu 07 Oct 2021 12:00:00 EDT urgency=low
+	Configuration changes
+	* "correct_escapes" has been removed, and is always set to
+	  "true" internally. Updates may be required to configurations
+	  dating from before 3.0.5.
+
 	Feature improvements
-	* You can take the 3.0 configuration files, and use them in
-	  3.2 without any changes.
-	* The only difference is that "correct_escapes" has been removed,
-	  and is always set to "true" internally.
+	* Apart from as mentioned above, you can take the 3.0
+	  configuration files, and use them in 3.2 without any changes.
 	* Add 'reset_day' and '%%r' parameter for rlm_sqlcounter to specify which
 	  day of the month the counter should be reset.
 	* Add dictionary.mellanox
