--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -10,6 +10,7 @@ FreeRADIUS 3.2.0 Thu 07 Oct 2021 12:00:00 EDT urgency=low
 	* Add 'reset_day' and '%%r' parameter for rlm_sqlcounter to specify which
 	  day of the month the counter should be reset.
 	* Add dictionary.mellanox
+	* Update dictionary.aruba
 
 	Bug fixes
 
