rlm_pap: Ensure PBKDF2 iterations is always at least 1
OpenSSL's PKCS5_PBKDF2_HMAC man page says "Any iter less than 1 is
treated as a single iteration", but this cannot always be the case
as the tests break on centos 8. RFC 2898 says iterations is a
positive integer, too, so enforce it here.

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -13,4 +13,5 @@ FreeRADIUS 3.2.0 Thu 07 Oct 2021 12:00:00 EDT urgency=low
 	* Update dictionary.aruba
 
 	Bug fixes
+	* Ensure PBKDF2 always uses at least one iteration
 
