--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -2,6 +2,8 @@ FreeRADIUS 3.0.26 Thu 07 Oct 2021 12:00:00 EDT urgency=low
 	Feature improvements
 	* Add dictionary.mellanox
 	* Update dictionary.aruba
+	* Removed haproxy support.  It's new and experimental,
+	  and belongs in the v3.2 release.
 
 	Bug fixes
 	* Ensure PBKDF2 always uses at least one iteration
