--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,8 +1,8 @@
 FreeRADIUS 3.2.0 Thu 07 Oct 2021 12:00:00 EDT urgency=low
 	Configuration changes
 	* "correct_escapes" has been removed, and is always set to
-	  "true" internally. Updates may be required to configurations
-	  dating from before 3.0.5.
+	  "true" internally. Updates may be required if you are using
+	  configurations from before 3.0.5.
 
 	Feature improvements
 	* Apart from as mentioned above, you can take the 3.0
@@ -11,8 +11,14 @@ FreeRADIUS 3.2.0 Thu 07 Oct 2021 12:00:00 EDT urgency=low
 	  day of the month the counter should be reset.
 	* Add dictionary.mellanox
 	* Update dictionary.aruba
-	* Partial backport of rlm_json from v4, providing the json_encode xlat
+	* Partial backport of rlm_json from v4, providing the json_encode xlat.
+	  See mods-available/json for documentation.
+	* Support for haproxy "PROXY" protocol.
+	  See sites-available/tls, "proxy_protocol" and doc/antora/modules/howto/pages/protocols/proxy/
+	* Support for sending CoA-Request and Disconnect-Request packets
+	  in "reverse" down RadSec tunnels.  Experimental for now, and
+	  undocumented.  This will change before 3.2.0 is released.
 
 	Bug fixes
-	* Ensure PBKDF2 always uses at least one iteration
+	* All bug fixes from v3.0.x are included in the v3.2.x release.
 
