--- a/src/modules/rlm_unbound/rlm_unbound.5
+++ b/src/modules/rlm_unbound/rlm_unbound.5
@@ -28,8 +28,8 @@ Each instance of rlm_unbound may take the following parameters:
 This file must exist and must point to a valid libunbound configuration file.
 The default is ${raddbdir}/mods-config/unbound/default.conf.
 .IP timeout
-While libunbound provides an asyncronous API for internal use, using any xlat
-is done syncronously from the perspective of unlang.  This value limits the
+While libunbound provides an asynchronous API for internal use, using any xlat
+is done synchronously from the perspective of unlang.  This value limits the
 amount of time a request will wait for DNS to respond, after which the xlat
 will fail.  The default is 3000 milliseconds.  This setting is independent of
 any libunbound configuration values.
