Use the common submodule infrastructure for rlm_sql
This gives us thread instantiation/detach for sql drivers

--- a/doc/antora/modules/howto/pages/modules/sql/odbc.adoc
+++ b/doc/antora/modules/howto/pages/modules/sql/odbc.adoc
@@ -265,7 +265,7 @@ The `rlm_sql` module can be configured as follows:
 
  sql {
      dialect = "mssql"
-     driver = "rlm_sql_unixodbc"
+     driver = "unixodbc"
      server = "MSSQLdb"           # The exact "[DSN]" from odbc.ini
      login = "radius"
      password = "radPass_123"
