--- a/doc/antora/modules/raddb/pages/mods-available/cui.adoc
+++ b/doc/antora/modules/raddb/pages/mods-available/cui.adoc
@@ -79,7 +79,7 @@ set `SQL-User-Name` to the new value.
 ```
 sql cuisql {
 	dialect = "sqlite"
-	driver = "rlm_sql_${dialect}"
+	driver = "${dialect}"
 #	server = "localhost"
 #	port = 3306
 #	login = "radius"
