Use common submodule CONF_PARSER code for loading submodules

--- a/doc/antora/modules/raddb/pages/mods-available/cache.adoc
+++ b/doc/antora/modules/raddb/pages/mods-available/cache.adoc
@@ -220,7 +220,7 @@ NOTE: All runtime configuration attributes will be removed from the
 
 ```
 cache {
-#	driver = "rlm_cache_rbtree"
+#	driver = "rbtree"
 #	memcached {
 #		options = "--SERVER=localhost"
 #		pool {
